[gd_scene load_steps=2 format=3 uid="uid://dacey0tgdvp5k"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_a5uno"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5uno")

[node name="LeftScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 30.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 60
text = "20"

[node name="RightScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 10.0
offset_right = -30.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "20"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 120.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Winner" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Winner is..."
horizontal_alignment = 1

[node name="GetReady" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Get Ready"
horizontal_alignment = 1
